--- a/style.css
+++ b/style.css
@@ -17,6 +17,18 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+section {
+  min-height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
 
 /*nav */
 nav {
@@ -49,11 +61,6 @@ nav ul li a {
 }
 
 /*landing */
-.landing_section {
-  min-height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
 .landing_text {
   position: absolute;
   top: 50%;
@@ -140,7 +147,6 @@ nav ul li a {
 
 /*services */
 .services_section {
-  min-height: 100vh;
   text-align: center;
 }
 .services_section h1 {
@@ -148,13 +154,6 @@ nav ul li a {
   font-weight: 700;
   margin: 0;
   padding: 0;
-}
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
 }
 .card {
   display: flex;
@@ -171,6 +170,102 @@ nav ul li a {
 }
 .card i {
   font-size: 60px;
+  color: var(--primary-color);
+}
+
+/*projects */
+#projects {
+  text-align: center;
+}
+#projects h1 {
+  font-size: 50px;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+.card_project {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 1px 5px var(--primary-color);
+  padding: 20px;
+  margin: 20px 0;
+  width: 300px;
+  height: 200px;
+  transition: all 0.3s ease;
+  text-align: center;
+  cursor: pointer;
+}
+.card_project-description-background {
+  position: absolute;
+  bottom: -70px;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background: var(--primary-color);
+  filter: blur(50px);
+  transition: all 0.3s ease;
+  transform: translateY(100%);
+}
+.card_project_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  transition: all 0.3s ease;
+  scale: 1.4;
+}
+.card_project-description {
+  z-index: 1;
+  color: var(--light-color);
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  transform: translateY(200%);
+  transition: all 0.3s ease;
+  text-align: left;
+  padding: 0 20px;
+}
+.card_project-description h4 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+.card_project-description p {
+  font-size: 14px;
+  font-weight: 400;
+  max-width: 320px;
+  margin: 0;
+  padding: 0;
+}
+.card_project:hover .card_project_img {
+  transform: scale(1.1);
+  filter: blur(5px);
+}
+.gh {
+  scale: 0.78;
+  object-fit: contain;
+}
+.card_project:hover .card_project-description {
+  transform: translateY(60%);
+}
+.card_project:hover .card_project-description-background {
+  transform: translateY(0);
+}
+.card_project i {
+  font-size: 20px;
+  color: var(--light-color);
+  transition: all 0.3s ease;
+}
+.card_project i:hover {
   color: var(--primary-color);
 }
 
