--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
   --font-primary: "Roboto", sans-serif;
   --font-secondary: "Montserrat", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: var(--light-color);
   font-family: var(--font-primary);
@@ -21,6 +24,7 @@ section {
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  padding-block: 80px;
 }
 .row {
   display: flex;
@@ -47,6 +51,7 @@ nav ul {
   display: flex;
   list-style: none;
   margin: 0;
+  margin-right: 20px;
   padding: 0;
 }
 nav ul li {
@@ -56,8 +61,11 @@ nav ul li a {
   color: var(--dark-color);
   text-decoration: none;
   display: block;
-  padding: 20px;
+  padding: 20px 0;
   transition: all 0.3s ease;
+}
+.active {
+  color: var(--primary-color);
 }
 
 /*landing */
@@ -250,8 +258,40 @@ nav ul li a {
   transform: scale(1.1);
   filter: blur(5px);
 }
+.card_project-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 90px;
+  padding: 4px;
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+  border-radius: 15px;
+  border: none;
+  box-shadow: 0 1px 5px var(--primary-color);
+  z-index: 5;
+  cursor: pointer;
+  opacity: 0;
+  text-decoration: none;
+  font-size: 14px;
+}
+.card_project-button:hover {
+  background-color: var(--secondary-color);
+  scale: 1.02;
+}
+.card_project:hover .card_project-button {
+  opacity: 1;
+}
 .gh {
   scale: 0.78;
+  object-fit: contain;
+}
+.ds {
+  scale: 1.2;
   object-fit: contain;
 }
 .card_project:hover .card_project-description {
@@ -264,9 +304,6 @@ nav ul li a {
   font-size: 20px;
   color: var(--light-color);
   transition: all 0.3s ease;
-}
-.card_project i:hover {
-  color: var(--primary-color);
 }
 
 /*media */
